--- a/data:analysis/combined_notebook.ipynb
+++ b/data:analysis/combined_notebook.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -759,8 +759,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sum over Price "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +872,7 @@
        "Rivertown            16550.0            Rivertown"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1005,13 +1012,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1327395.4211046512"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# <your code> \n",
-    "\n"
+    "dem.Price.mean()\n"
    ]
   },
   {
@@ -1026,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1110,6 +1128,7 @@
    ],
    "source": [
     "# The neighborhood where the most demolitions took place was Warrendale - 653\n",
+    "\n",
     "print ( \"The neighborhood with the highest number of demolitions is\", demolitionsnum[demolitionsnum['DemCount'] ==653])"
    ]
   },
@@ -1136,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -1348,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1376,7 @@
        "173"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1629,7 @@
        "2  location\\n(42.336451, -83.114124)          POINT (-83.114124 42.336451)  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1697,7 @@
     "\n",
     "Let's check out crime levels in Detroit's neighbohoods. We will use data from Detroit's open data portal which reflect all crime incidents for 2013 (to determine crime level baseline aka - just before the policy was introduced) and 2017 (the most recent full year).\n",
     "\n",
-    "Since the crime incidents open datasets have changed in format over time and since our lab has strict time constraints, and computation power limitations we have manipulated the 2013 and 2017 datasets ahead of time and combined them into one cleaned CSV file grouped by neighborhoods. Tjhe total # of crime incidents for 2013 was \n",
+    "Since the crime incidents open datasets have changed in format over time and since our lab has strict time constraints, and computation power limitations we have manipulated the 2013 and 2017 datasets ahead of time and combined them into one cleaned CSV file grouped by neighborhoods. The total # of crime incidents for 2013 was \n",
     "146,908 and 82,439 for 2017. \n",
     "\n",
     "Note about impact examination:\n",
@@ -1697,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1782,7 @@
        "3  Jefferson Chalmers          468          654"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1808,7 @@
        "Text(0.5,1,'Detroit # of Crime Incidents by Neighbohorhood 2013 2017')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1829,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1927,7 @@
        "4         Morningside         1102         1514 -27.212682"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1925,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1953,7 @@
        "Text(0.5,1,'Detroit % Crime Change by Neighbohorhood 2013 2017')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1983,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2087,7 +2106,7 @@
        "4       717.249191  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2100,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2128,7 @@
        "Text(0.5,1,'Detroit Demolitions and Crime levels 13 to 17 (sorted by Crime)')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2141,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2150,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2178,7 @@
        "Text(0.5,1,'Detroit Demolitions and Crime levels 13 to 17 (sorted by Demolitions)')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2215,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2294,7 +2313,7 @@
        "4           4  Barton-McFarland     32127.0     32816.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2317,7 +2336,7 @@
        "195"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2328,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2337,7 +2356,7 @@
        "Text(0.5,1,'Detroit Parcel Sale Mean by Neighborhood 2013 and 2017')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2478,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2488,26 +2507,6 @@
     "\n",
     "#how does it look like:\n",
     "#ParcelSale.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "192"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(ParcelSale)"
    ]
   },
   {
@@ -2669,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2680,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2689,7 +2688,7 @@
        "Text(0.5,1,'Detroit Demolitions and Real Estate Sales levels 13 to 17 (sorted by Sales % change)')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2714,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2724,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2732,7 @@
        "Text(0.5,1,'Detroit Demolitions and Real Estate Sales levels 13 to 17 (sorted by normalized demolitions )')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2787,11 +2786,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The demolitions policy going back to 2014 until today seems to have affected all Detroit’s neighborhoods, but there are huge differences in the magnitude in terms of prices — which was as high as 9 million for one neighborhood and as low as 9000 USD. There is also a big variance in terms of number of demolitions per neighborhoods throughout the largest number of demolitions was in Outer-Drive - Hayes with 395 demolitions. 11 neighborhoods have only had 1 demolition  accruing over these four years. When accounting for neighborhood size Westwood Park  and Holocmb Community were the most affected  neighborhoods.  \n",
+    "- The demolitions policy going back to 2014 until today seems to have affected all Detroit’s neighborhoods, but there are huge differences in the magnitude in terms of prices — which was as high as 9 million for one neighborhood and as low as 9000 USD. There is also a big variance in terms of number of demolitions per neighborhoods throughout the largest number of demolitions was in  Warrendale  with   653. 11 neighborhoods have only had 1 demolition  accruing over these four years. When accounting for neighborhood size Westwood Park  and Holocmb Community were the most affected  neighborhoods.  \n",
     "\n",
-    "- The number of all crime incidents between 2013 and 2017 (2014, 2015, and 2016 were not studied) has decreased drastically across Detroit, among the vast majority of neighborhoods.  Belle Isle’s crime has reduced in more than 90% and Oak Grove crime rate has increased around around the same level. Visualizing percentage of crime incidents rate changes and demolition levels there doesn’t seem to have a strong link between both. \n",
+    "- The number of all crime incidents between 2013 and 2017 (2014, 2015, and 2016 were not studied) has decreased drastically across Detroit, among the vast majority of neighborhoods.  Belle Isle’s crime has reduced in more than 90% and Oak Grove crime rate has increased around the same level. Visualizing percentage of crime incidents rate changes and demolition levels, in the boundrias of our analysis we couldn't find a strong link between both. \n",
     "\n",
-    "- Between  2013 and 2017 (once again 2014-2016 were not studied)  Real estate average prices changes seemed to rise with, Lafayette Park has resulted in the biggest percentage change of more than  +1200% Greenfield Park had experienced the biggest decrease in average sales price from $28K to $1K (!) in 2017.  \n",
+    "- Between  2013 and 2017 (once again 2014-2016 were not studied)  Real estate average prices seemed to rise with, Lafayette Park has resulted in the biggest percentage change of more than  +1200% Greenfield Park has experienced the biggest decrease in average sales price from $28K to $1.2K (!) in 2017.  \n",
     "\n",
     "- More generally, it seems like we need to take more social variables into account to fully understand trends and demolitions implications in Detroit. In addition, it may be the case that this policy has more longer term impact. One reason for that can be that the neighborhoods need time to re adjust to the changes and re-define their identities. "
    ]
@@ -2800,7 +2799,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Extra"
+    "## 5. Survey \n",
+    "\n",
+    "https://docs.google.com/forms/d/e/1FAIpQLScxk-3wwSHPCAcZIAzaewlwG_TqGyuduxYR45ljUWAD_5JrqA/viewform?usp=sf_link"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Extra"
    ]
   },
   {
@@ -2818,15 +2826,6 @@
     "* Important: To save your notebook to your local machine - go to: File- Download as - Choose HTML (or Notebook if you have Anaconda installed to your computer) \n",
     "* To access data used for this lab go to: https://data.detroitmi.gov/\n",
     "* If you are intrested in learning more about Detroit's demolitions and deepen your study using other cool datasets, we recommended analyzing the Demolition Pipeline data as well as the Upcoming Demolitions to learn where the next demolitions are planned to take place (both datasets can be accessed in Detroit's open data portal) \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Survey \n",
-    "\n",
-    "https://docs.google.com/forms/d/e/1FAIpQLScxk-3wwSHPCAcZIAzaewlwG_TqGyuduxYR45ljUWAD_5JrqA/viewform?usp=sf_link"
    ]
   },
   {
